# FreeRTOS

./: README.md.txt
Template/: .gitignore  CMakeLists.txt  Makefile  README.txt  gcc-arm-none-eabi.cmake
Template/Core/Inc/: FreeRTOSConfig.h  app_bluenerg.h  keypad.h  main.h  service.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
Template/Core/Src/: app_bluenerg.c  keypad.c  main.c  service.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  syscalls.c  usart.c
Template/Drivers/BLE/Inc/: bluenrg1_events.h  bluenrg1_gap_aci.h  bluenrg_conf.h  sm.h
Template/Drivers/BLE/Nucleo/Inc/: stm32f4xx_nucleo_bus.h  stm32f4xx_nucleo_conf.h  stm32f4xx_nucleo_errno.h
Template/Drivers/BLE/Nucleo/Src/: stm32f4xx_nucleo_bus.c
Template/Drivers/BLE/hci/Src/: bluenrg1_events.c  bluenrg1_events_cb.c  hci_tl_interface.c
Template/Startup/: linker_script.ld  startup.c
